syntax = "proto3";

option csharp_namespace = "Authentication.Grpc";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message RegisterResponse {
  string status = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string error = 2;
  int32 status = 3;
}
