 syntax = "proto3";

option csharp_namespace = "DriverService";

package driver;

service DriverService {
  rpc Register (RegisterDriverRequest) returns (RegisterDriverResponse);
  rpc GetById (GetDriverRequest) returns (GetDriverResponse);
  rpc Update (UpdateDriverRequest) returns (UpdateDriverResponse);
  rpc Delete (DeleteDriverRequest) returns (DeleteDriverResponse);
  rpc ListAll (Empty) returns (ListAllDriversResponse);
  rpc GetByIdentificationNumber (IdentificationNumberRequest) returns (GetDriverResponse);
}

message RegisterDriverRequest {
  string name = 1;
  string identificationNumber = 2;
  bool available = 3;
  string machineryType = 4;
}

message IdentificationNumberRequest {
  string identificationNumber = 1;
}

message RegisterDriverResponse {
  string status = 1;
}

message GetDriverRequest {
  int32 id = 1;
}

message GetDriverResponse {
  int32 id = 1;
  string name = 2;
  string identificationNumber = 3;
  bool available = 4;
  string machineryType = 5;
}


message UpdateDriverRequest {
  int32 id = 1;
  string name = 2;
  bool available = 3;
  string machineryType = 4;
}

message UpdateDriverResponse {
  string status = 1;
}

message DeleteDriverRequest {
  int32 id = 1;
}

message DeleteDriverResponse {
  string status = 1;
}

message DriverItem {
  int32 id = 1;
  string name = 2;
  string identificationNumber = 3;
  bool available = 4;
  string machineryType = 5;
}


message ListAllDriversResponse {
  repeated DriverItem drivers = 1;
}

message Empty {}